# katas

./: .gitignore  CMakeLists.txt  README.md  flake.nix
gilded_rose/: CMakeLists.txt
gilded_rose/include/gilded_rose/: gilded_rose.hxx
gilded_rose/src/: gilded_rose.cxx
gilded_rose/test/: test_cases.cxx
include/gilded_rose/: gilded_rose.hxx
src/: gilded_rose.cxx
test/: test_cases.GildedRoseApprovalTests.approved.txt  test_cases.UpdateQualityApprovalTest.approved.txt  test_cases.cxx  test_main.cxx
